# ABC-03

./: ReadMe.txt
02 как надо/: CMakeLists.txt  chastnoe.c  data.h  extdata.h  input.c  inrnd.c  main.c  output.c
02 как надо/tests/Tests1/: out1.txt  out2.txt  test01.txt
02 как надо/tests/Tests2/: out1.txt  out2.txt  test02.txt
02 как надо/tests/Tests3/: out1.txt  out2.txt  tests.txt
02 как надо/tests/Tests4/: out1.txt  out2.txt  tests.txt
02 как надо/tests/Tests5/: out1.txt  out2.txt  tests.txt
